# zad5_1-delipl

./: .gitmodules  CMakeLists.txt  ClassDiagram.dia  ClassDiagram.dia.autosave  Doxyfile.in  README.md
app/: main.cpp  softBody.cpp
inc/: Animation.hpp  Drone.hpp  Matrix.hpp  Matrixes.hpp  Menu.hpp  Object.hpp  Scene.hpp  SceneObject.hpp  Transform.hpp  Vector.hpp  Vectors.hpp  config.hpp  config.hpp.in  config.hpp.tmp  main.cpp
inc/SceneObjects/: Cuboid.hpp  Drone.hpp  Rotor.hpp  Route.hpp  Terrain.hpp
prn/: Matrix.tpp  Vector.tpp
src/: Animation.cpp  Drone.cpp  GnuPlotApi.cpp  Matrixes.cpp  Menu.cpp  Object.cpp  Scene.cpp  SceneObject.cpp  Transform.cpp  Vectors.cpp
src/SceneObjects/: Cuboid.cpp  Drone.cpp  Rotor.cpp  Route.cpp
tests/: CMakeLists.txt  drone.ut.cpp  matrix.ut.cpp  menu.ut.cpp  object.ut.cpp  scene.ut.cpp  sceneObject.ut.cpp
